[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sv2-linux-bridge"
version = "1.0.0"
description = "OAuth authentication bridge for Synthesizer V Studio 2 on Linux"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["synthesizer-v", "wine", "bottles", "oauth", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/anxrch/sv2-linux-bridge"
Issues = "https://github.com/anxrch/sv2-linux-bridge/issues"

[project.scripts]
sv2-auth-bridge = "src.auth_bridge.server:main_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
